--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <head>
         <meta charset="utf-8">
         <title>
-            The Rising of the Shield Hero
+            Anime Countdown
         </title><!-- Behavioral Meta Data -->
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
         <meta content="Cheter01" name="author">
-        <meta content="The Rising of the Shield Hero" name="description">
-        <meta content="Comming Soon, The Rising of the Shield Hero" name="keywords"><!-- Open Graph Meta Data -->
-        <meta content="The Rising of the Shield Hero">
+        <meta content="Anime Countdown" name="description">
+        <meta content="Comming Soon, Anime Countdown" name="keywords"><!-- Open Graph Meta Data -->
+        <meta content="Anime Countdown">
         <meta content="Cheter01">
         <meta content="Cheter01">
         <meta content="website">
 
-        <link href="images/sphere.png" rel="shortcut icon" type="image/png">
+        <link href="images/wait.png" rel="shortcut icon" type="image/png">
 
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -54,7 +54,7 @@
                 <!-- BG -->
 
                 <li class="layer" data-depth="0.10">
-                    <div class="background">
+                    <div class="background" id="sfondo">
                     </div>
                 </li>
 
@@ -62,18 +62,18 @@
 
                 <li class="layer" data-depth="0.20">
                     <div class="title">
-                        <h2>
+                        <h2 id="titolo_anime">
                             The Rising of the Shield Hero
                         </h2>
                         <span class="line"></span>
                     </div>
                 </li>
 
-                <li class="layer" data-depth="0.25">
+                <!-- <li class="layer" data-depth="0.25">
                     <div class="sphere">
                         <img alt="sphere" src="images/sphere.png">
                     </div>
-                </li>
+                </li> -->
 
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
