--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                             
                         </h1>
 
-                        <!-- <p class="sub-title">
-                            The most spectacular coming soon template!
-                        </p> -->
+                        <p class="sub-title" id="seguente">
+                            A seguire: 
+                        </p>
                     </div>
                 </li>
                 <!-- Flakes -->
