--- a/index.html
+++ b/index.html
@@ -1,73 +1,82 @@
 
 <!DOCTYPE html>
 <html lang="it">
-    <!--<![endif]-->
+<!--<![endif]-->
 
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Anime Countdown
-        </title><!-- Behavioral Meta Data -->
-        <meta content="yes" name="apple-mobile-web-app-capable">
-        <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
-        <meta content="Cheter01" name="author">
-        <meta content="Anime Countdown" name="description">
-        <meta content="Comming Soon, Anime Countdown" name="keywords"><!-- Open Graph Meta Data -->
-        <meta content="Anime Countdown">
-        <meta content="Cheter01">
-        <meta content="Cheter01">
-        <meta content="website">
+<head>
+	<meta charset="utf-8">
+	<title>
+		Anime Countdown
+	</title><!-- Behavioral Meta Data -->
+	<meta content="yes" name="apple-mobile-web-app-capable">
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
+	<meta content="Cheter01" name="author">
+	<meta content="Anime Countdown" name="description">
+	<meta content="Comming Soon, Anime Countdown" name="keywords"><!-- Open Graph Meta Data -->
+	<meta content="Anime Countdown">
+	<meta content="Cheter01">
+	<meta content="Cheter01">
+	<meta content="website">
 
-        <link href="images/wait.png" rel="shortcut icon" type="image/png">
+	<link href="images/wait.png" rel="shortcut icon" type="image/png">
 
-        <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        
-        <!-- CSS -->
-        <!-- <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'> --><!-- Styles -->
-        <link href="css/loader.css" rel="stylesheet" type="text/css">
-        <link href="css/normalize.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        <!--[if lt IE 9]>
-            <link rel="stylesheet" type="text/css" href="css/ie.css" />
-        <![endif]-->
-        <!-- Javascript -->
 
-        <script src="js/jquery.js"></script>
-    </head>
-    <body>
-        <div class="preloader">
-            <div class="loading">
-                <h2>
-                    Loading...
-                </h2>
-                <span class="progress"></span>
-            </div>
-        </div>
+	<!-- CSS -->
+	<!-- Google -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-        <div class="wrapper">
-            <ul class="scene unselectable" data-friction-x="0.1" data-friction-y="0.1" data-scalar-x="25" data-scalar-y="15" id="scene">
-                <li class="layer" data-depth="0.00">
-                </li>
-                <!-- BG -->
+	<link href="css/loader.css" rel="stylesheet" type="text/css">
+	<link href="css/normalize.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/font-awesome.min.css"><!-- Styles -->
+	<link href="css/style.css" rel="stylesheet" type="text/css">
 
-                <li class="layer" data-depth="0.10">
-                    <div class="background" id="sfondo">
-                    </div>
-                </li>
 
-                <!-- Hero -->
+	<script src="js/jquery.js"></script>
+</head>
+<body>
+	<div class="preloader">
+		<div class="loading">
+			<h2>
+				Loading...
+			</h2>
+			<span class="progress"></span>
+		</div>
+	</div>
 
-                <li class="layer" data-depth="0.20">
-                    <div class="title">
-                        <h2 id="titolo_anime">
-                            The Rising of the Shield Hero
-                        </h2>
-                        <span class="line"></span>
-                    </div>
-                </li>
+	<div class="demo-layout-transparent mdl-layout mdl-js-layout">
+
+
+		<!-- cassetto -->
+		<div class="mdl-layout__drawer">
+			<nav class="mdl-navigation" id="navigation">
+				<span class="mdl-layout-title htitle">Anime</span>
+			</nav>
+		</div>
+
+		<main>
+			<div class="wrapper">
+				<ul class="scene unselectable" data-friction-x="0.1" data-friction-y="0.1" data-scalar-x="25" data-scalar-y="15" id="scene">
+					<li class="layer" data-depth="0.00">
+					</li>
+					<!-- BG -->
+
+					<li class="layer" data-depth="0.10">
+						<div class="background" id="sfondo">
+						</div>
+					</li>
+
+					<!-- Hero -->
+
+					<li class="layer" data-depth="0.20">
+						<div class="title">
+							<h2 id="titolo_anime">
+								The Rising of the Shield Hero
+							</h2>
+							<span class="line"></span>
+						</div>
+					</li>
 
                 <!-- <li class="layer" data-depth="0.25">
                     <div class="sphere">
@@ -76,15 +85,15 @@
                 </li> -->
 
                 <li class="layer" data-depth="0.30">
-                    <div class="hero">
-                        <h1 id="countdown">
-                            
-                        </h1>
+                	<div class="hero">
+                		<h1 id="countdown">
 
-                        <p class="sub-title" id="seguente">
-                            A seguire: 
-                        </p>
-                    </div>
+                		</h1>
+
+                		<p class="sub-title" id="seguente">
+                			A seguire: 
+                		</p>
+                	</div>
                 </li>
                 <!-- Flakes -->
 
@@ -107,13 +116,13 @@
                 </li> -->
 
                 <li class="layer" data-depth="0.50">
-                    <div class="depth-2 flake1">
-                        <img alt="flake" src="images/flakes/depth2/flakes1.png">
-                    </div>
+                	<div class="depth-2 flake1">
+                		<img alt="flake" src="images/flakes/depth2/flakes1.png">
+                	</div>
 
-                    <div class="depth-2 flake2">
-                        <img alt="flake" src="images/flakes/depth2/flakes2.png">
-                    </div>
+                	<div class="depth-2 flake2">
+                		<img alt="flake" src="images/flakes/depth2/flakes2.png">
+                	</div>
                 </li>
 
                 <!-- <li class="layer" data-depth="0.60">
@@ -135,15 +144,15 @@
                 </li> -->
 
                 <li class="layer" data-depth="0.80">
-                    <div class="depth-4">
-                        <img alt="flake" src="images/flakes/depth4/flakes.png">
-                    </div>
+                	<div class="depth-4">
+                		<img alt="flake" src="images/flakes/depth4/flakes.png">
+                	</div>
                 </li>
 
                 <li class="layer" data-depth="1.00">
-                    <div class="depth-5">
-                        <img alt="flake" src="images/flakes/depth5/flakes.png">
-                    </div>
+                	<div class="depth-5">
+                		<img alt="flake" src="images/flakes/depth5/flakes.png">
+                	</div>
                 </li>
                 <!-- Contact -->
 
@@ -168,11 +177,12 @@
                 </li>
             </ul> -->
         </div>
+    </main>
+</div>
+<!-- Javascript -->
+<script src="js/plugins.js"></script> 
+<script src="js/jquery.countdown.min.js"></script> 
+<script src="js/main.js"></script>
 
-        <!-- Javascript -->
-        <script src="js/plugins.js"></script> 
-        <script src="js/jquery.countdown.min.js"></script> 
-        <script src="js/main.js"></script>
-
-    </body>
+</body>
 </html>
