--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
   };
   firebase.initializeApp(config);
   var db = firebase.firestore();
+  var storage = firebase.storage();
 </script>
 
 <!-- Javascript -->
