--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
+	<!-- firebase -->
+	<script src="https://www.gstatic.com/firebasejs/ui/3.5.2/firebase-ui-auth__it.js"></script>
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/3.5.2/firebase-ui-auth.css" />
+
 	<link href="css/loader.css" rel="stylesheet" type="text/css">
 	<link href="css/normalize.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/font-awesome.min.css"><!-- Styles -->
@@ -36,7 +40,8 @@
 	<script src="js/jquery.js"></script>
 </head>
 <body>
-	<div class="preloader">
+	<div class="preloader" id="auth">
+		<div id="firebaseui-auth-container"></div>
 		<div class="loading">
 			<h2>
 				Loading...
@@ -183,8 +188,13 @@
     </main>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-app.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-auth.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-database.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-firestore.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-messaging.js"></script> -->
+<!-- <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-functions.js"></script> -->
 <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 <script>
   // Initialize Firebase
@@ -204,6 +214,7 @@
 <!-- Javascript -->
 <script src="js/plugins.js"></script> 
 <script src="js/main.js"></script>
+<script src="js/auth.js"></script>
 
 </body>
 </html>
