--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <li class="layer" data-depth="0.30">
                 	<div class="hero">
                 		<h1 id="countdown">
-                			<div></div>
-                			<div></div>
-                			<div></div>
-                			<div></div>
+                			<div>00</div>
+                			<div>00</div>
+                			<div>00</div>
+                			<div>00</div>
                 		</h1>
 
                 		<p class="sub-title" id="seguente">
