--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<meta content="Cheter01">
 	<meta content="website">
 
+    <link rel="manifest" href="/manifest.json">
 	<link href="images/wait.png" rel="shortcut icon" type="image/png">
 
 
@@ -213,6 +214,18 @@
 <script src="js/plugins.js"></script> 
 <script src="js/main.js"></script>
 <script src="js/auth.js"></script>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    console.log("Will the service worker register?");
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(reg){
+        console.log("Yes, it did.");
+      }).catch(function(err) {
+        console.log("No it didn't. This happened: ", err)
+      });
+  }
+</script>
 
 </body>
 </html>
