--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta content="Cheter01">
 	<meta content="website">
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 	<link href="images/wait.png" rel="shortcut icon" type="image/png">
 
 
